Deleted repeated comments, fixed navbar overlap for upload & share view

--- a/app/static/css/navbar.css
+++ b/app/static/css/navbar.css
@@ -5,7 +5,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: Quicksand, sans-serif;
-    padding-top: 60px;
+    overflow: hidden;
 }
 
 /* Apply box-sizing to all elements */
@@ -66,7 +66,7 @@ html, body {
     margin-left: auto; /* Push entire group to the right */
     display: flex;
     align-items: center;
-    gap: 10px; /* space between user info and button */
+    gap: 20px; /* space between user info and button */
 }
 
 .navbar-user {
@@ -75,6 +75,7 @@ html, body {
 }
 
 .logout-btn {
+    margin-top: 0;
     background: none;
     border: none;
     cursor: pointer;
