--- a/app/static/css/visualise.css
+++ b/app/static/css/visualise.css
@@ -43,6 +43,7 @@ body, html {
     height: 100vh;
     width: 100vw;
     padding: 20px;
+    padding-top: 40px;
     gap: 20px;
     box-sizing: border-box;
 }
